--- a/importer/config.yml
+++ b/importer/config.yml
@@ -1,6 +1,5 @@
 services.client.timeout: 10
-services.client.football.host: localhost:8000
+services.client.football.host: localhost
+services.client.football.port: 8000
 
-jobs.event.getevent.limit: 10
-jobs.event.getmarkets.limit: 10
-jobs.event.storesend.limit: 10
+jobs.event.steps.limit: 10
