Added mapping error logging

--- a/importer/config.yml
+++ b/importer/config.yml
@@ -1,5 +1,5 @@
 services.client.timeout: 10
-services.client.football.host: localhost
-services.client.football.port: 8000
+services.client.feed.host: localhost
+services.client.feed.port: 8000
 
 jobs.event.steps.limit: 10
